--- a/cesium_platform/package.json
+++ b/cesium_platform/package.json
@@ -9,11 +9,12 @@
   },
   "dependencies": {
     "@jiaminghi/data-view": "^2.10.0",
-    "babel-loader": "^7.1.5",
+    "babel-loader": "^9.1.2",
     "core-js": "^3.8.3",
     "element": "^0.1.4",
-    "node-sass": "^8.0.0",
-    "vue": "^3.3.4"
+    "eslint-plugin-vue": "^9.13.0",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -41,7 +42,9 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {
+      "vue/multi-word-component-names": "off"
+    }
   },
   "browserslist": [
     "> 1%",
