--- a/cesium_platform/package.json
+++ b/cesium_platform/package.json
@@ -11,7 +11,7 @@
     "@jiaminghi/data-view": "^2.10.0",
     "babel-loader": "^9.1.2",
     "core-js": "^3.8.3",
-    "element": "^0.1.4",
+    "element-plus": "^2.3.5",
     "eslint-plugin-vue": "^9.13.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.1"
@@ -25,7 +25,12 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "node-sass": "^8.0.0",
-    "sass-loader": "^13.2.2"
+    "sass": "^1.27.0",
+    "sass-loader": "^13.2.2",
+    "vue-cli-plugin-element": "~1.0.1",
+    "vue-cli-plugin-element-plus": "~0.0.13",
+    "vue-loader": "^17.1.1",
+    "vue-template-compiler": "^2.7.14"
   },
   "eslintConfig": {
     "root": true,
