--- a/cesium_platform/package.json
+++ b/cesium_platform/package.json
@@ -8,11 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@jiaminghi/data-view": "^2.10.0",
+    "@dataview/datav-vue3": "^0.0.0-test.1672506674342",
+    "@kjgl77/datav-vue3": "^1.5.0",
     "babel-loader": "^9.1.2",
     "core-js": "^3.8.3",
     "element-plus": "^2.3.5",
     "eslint-plugin-vue": "^9.13.0",
+    "node-sass": "^9.0.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.1"
   },
@@ -25,7 +27,6 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "node-sass": "^8.0.0",
-    "sass": "^1.27.0",
     "sass-loader": "^13.2.2",
     "vue-cli-plugin-element": "~1.0.1",
     "vue-cli-plugin-element-plus": "~0.0.13",
