--- a/cesium_platform/package.json
+++ b/cesium_platform/package.json
@@ -8,10 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@dataview/datav-vue3": "^0.0.0-test.1672506674342",
     "@kjgl77/datav-vue3": "^1.5.0",
     "babel-loader": "^9.1.2",
     "core-js": "^3.8.3",
+    "echarts": "^5.4.2",
     "element-plus": "^2.3.5",
     "eslint-plugin-vue": "^9.13.0",
     "node-sass": "^9.0.0",
