--- a/cesium_platform/package.json
+++ b/cesium_platform/package.json
@@ -8,13 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@jiaminghi/data-view": "^2.10.0",
     "@kjgl77/datav-vue3": "^1.5.0",
+    "axios": "^1.4.0",
     "babel-loader": "^9.1.2",
     "core-js": "^3.8.3",
     "echarts": "^5.4.2",
     "element-plus": "^2.3.5",
     "eslint-plugin-vue": "^9.13.0",
+    "jquery": "^3.7.0",
     "node-sass": "^9.0.0",
+    "uuid": "^9.0.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.1"
   },
@@ -36,7 +40,8 @@
   "eslintConfig": {
     "root": true,
     "env": {
-      "node": true
+      "node": true,
+      "jquery": true
     },
     "globals": {
       "Cesium": true
