--- a/cesium_platform/package.json
+++ b/cesium_platform/package.json
@@ -16,6 +16,7 @@
     "core-js": "^3.8.3",
     "echarts": "^5.4.2",
     "element-plus": "^2.3.5",
+    "element-ui": "^2.15.13",
     "eslint-plugin-vue": "^9.13.0",
     "jquery": "^3.7.0",
     "node-sass": "^9.0.0",
